[tool.poetry]
name = "cla-streamlit"
version = "0.1.0"
description = ""
authors = ["Adrienne Wright <ad@rienne.de>"]
readme = "README.md"
packages = [{include = "cla_streamlit"}]
repository = "https://github.com/gitovska/cla-streamlit"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
